<resources>
    <string name="app_name">Stock Tracker</string>
    <string name="follow_stock">Follow stock</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="open">Open:</string>
    <string name="_24h_volume">24h vol:</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="unfollow">Unfollow</string>
    <string name="please_add_stock_from_the_app">Please add stock from the app</string>
    <string name="widget_starting_image">Widget starting image</string>
    <string name="widget_stock_name">Widget stock name</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_new_stock">Add new stock</string>
    <string name="stock_not_available">Stock not available</string>
    <string name="currency_already_added">Currency is already added!</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="currency_now_unfollowed">Currency is now unfollowed!</string>
    <string name="added">Added </string>
    <string name="to_widget"> to Widget.</string>
    <string name="is_now_followed"> is now followed!</string>
</resources>
