<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/widget_starter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/please_add_stock_from_the_app" />

    <ImageView
        android:id="@+id/widget_starter_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_money_white_24dp"
        android:contentDescription="@string/widget_starting_image" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="7002.03" />

        <TextView
            android:id="@+id/high_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/high"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/price_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/low_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/low"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/price_tv"
            app:layout_constraintTop_toBottomOf="@+id/high_label" />

        <TextView
            android:id="@+id/open_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/open"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/price_tv"
            app:layout_constraintTop_toBottomOf="@id/low_label" />

        <TextView
            android:id="@+id/high_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:text="2322.32"
            app:layout_constraintStart_toEndOf="@+id/high_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/low_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/high_tv"
            app:layout_constraintTop_toBottomOf="@+id/high_tv"
            tools:text="2322.32" />

        <TextView
            android:id="@+id/open_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/high_tv"
            app:layout_constraintTop_toBottomOf="@+id/low_tv"
            tools:text="2322.32" />

        <TextView
            android:id="@+id/change24_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_tv"
            tools:text="-23.23" />

        <TextView
            android:id="@+id/change_percent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/change24_tv"
            app:layout_constraintTop_toBottomOf="@+id/price_tv"
            tools:text="-6.8 %" />

        <TextView
            android:id="@+id/volume_24h_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/_24h_volume"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_percent_tv" />

        <TextView
            android:id="@+id/volume_24h_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/volume_24h_label"
            app:layout_constraintTop_toTopOf="@+id/volume_24h_label"
            tools:text="2322" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>